# llama_dart

./: .dockerignore  .gitignore  .pubignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  codecov.yml  dart_test.yaml  ffigen.yaml  full_log.txt  pubspec.yaml  pubspec_overrides.yaml
.github/: pull_request_template.md
.github/workflows/: build_native.yml  chat_app_hf_static_deploy.yml  ci.yml  docs_pages.yml  docs_version_cut.yml  llama_cpp_auto.yml  monitor_llama_cpp.yml  publish_webgpu_bridge_assets.yml  sync_native_bindings.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
artifacts/updated_source/hook/: build.dart
doc/: webgpu_bridge.md
docker/validation/: Dockerfile.cuda-linkcheck  Dockerfile.hip-linkcheck
docs/: webgpu_bridge.md
example/: README.md
example/basic_app/: README.md  pubspec.yaml
example/basic_app/lib/: inference_test.dart  models.dart
example/basic_app/test/: basic_app_test.dart
example/chat_app/: README.md  pubspec.yaml  pubspec_overrides.yaml
example/chat_app/integration_test/: smoke_test.dart
example/chat_app/lib/: chat_screen.dart  main.dart
example/chat_app/test/: app_shell_screen_test.dart  assistant_output_service_test.dart  backend_utils_test.dart  chat_generation_service_test.dart  chat_session_service_test.dart  conversation_state_service_test.dart  mocks.dart  model_service_cancel_test.dart  model_service_test.dart  runtime_profile_service_test.dart  settings_service_test.dart  tool_declaration_service_test.dart  tool_declarations_dialog_test.dart  unit_test.dart  widget_test.dart  widget_test_real.dart
example/chat_app/web/: index.html  manifest.json
example/llamadart_cli/: .gitignore  README.md  dart_test.yaml  pubspec.yaml
example/llamadart_cli/lib/: llamadart_cli.dart
example/llamadart_cli/test/: llama_cli_arg_parser_test.dart  model_locator_test.dart  parity_gate_real_local_test.dart  parity_harness_local_test.dart  parity_harness_test.dart  tool_call_parity_real_local_test.dart
example/llamadart_cli/tool/: check_local_parity.sh  parity_harness.dart  tool_call_parity.dart
example/llamadart_server/: .gitignore  README.md  pubspec.yaml
example/llamadart_server/lib/: llamadart_server.dart
example/llamadart_server/test/: cli_entrypoint_process_test.dart  openai_mapper_test.dart  openai_server_integration_test.dart
example/multimodal/: chat_multimodal.dart  diagnostics.dart
hook/: build.dart
hook/src/: native_bundle_config.dart
integration_test/: smoke_test.dart
ios/: llamadart.podspec
ios/Classes/: llamadart.cpp
ios/Frameworks/llama.xcframework/: Info.plist
lib/: llamadart.dart  llamadart_web.dart
lib/src/: llama_service_interface.dart  llama_service_native.dart  llama_service_web.dart  loader.dart  setup_utils.dart
lib/src/backend/: llama_backend_factory.dart  llama_backend_interface.dart
lib/src/backends/: backend.dart
lib/src/common/: json_schema_to_gbnf.dart  loader.dart  loader_native.dart  loader_web.dart
lib/src/core/: exceptions.dart  llama_logger.dart
lib/src/engine/: chat_session.dart  chat_template_processor.dart  llama_engine.dart  llama_tokenizer.dart
lib/src/hook/: native_bundle_config.dart
lib/src/models/: generation_params.dart  llama_chat_message.dart  llama_chat_role.dart  llama_content_part.dart  (+3 more)
linux/: CMakeLists.txt
macos/: llamadart.podspec
scripts/: README.md  build_android.sh  build_apple.sh  build_ios_xcframework.sh  build_linux.sh  build_linux_x64.sh  build_webgpu_bridge.sh  build_windows.ps1  build_windows_mingw.sh  check_native_link_deps.sh  fetch_webgpu_bridge_assets.sh  smoke_web_function_gemma_template.sh  smoke_web_multimodal_audio.sh  smoke_web_multimodal_vision.sh
src/native/: CMakeLists.txt
test/: README.md  chat_session_mock_test.dart  chat_session_test.dart  engine_integration_test.dart  engine_mock_test.dart  engine_test.dart  engine_unit_test.dart  grammar_regression_test.dart  grammar_test.dart  helpers_test.dart  inference_smoke_test.dart  jinja_template_test.dart  json_schema_to_gbnf_test.dart  models_test.dart  multimodal_test.dart  native_symbol_test.dart  repro_deepseek.dart  repro_minimal.dart  reproduction_macro_test.dart  reproduction_test.dart  simple_check.dart  simple_tokenizer.dart  template_processor_test.dart  template_processor_unit_test.dart  test_helper.dart  tojson_repro_test.dart  tokenizer_test.dart  tokenizer_unit_test.dart  tool_calling_test.dart  tools_unit_test.dart  verify_models.dart  web_backend_unit_test.dart  web_integration_test.dart  web_smoke_test.dart  worker_messages_test.dart
test/integration/: engine_integration_test.dart  engine_reloading_test.dart  inference_smoke_test.dart  multimodal_test.dart  native_tool_test.dart
tool/: build_ios.dart  update_llama_cpp.dart
tool/docs/: build_site.sh  validate_links.sh
tool/native/: sync_native_headers_and_bindings.sh
tool/testing/: check_lcov_threshold.dart  check_platform_boundaries.dart  native_inference_benchmark.dart  native_prompt_reuse_parity.dart  prepare_llama_cpp_source.sh  repro_minimal.dart  run_llama_cpp_chat_tests.sh  run_template_parity_suites.sh  test_thinking_extraction.dart  verify_recommended_models.dart
webgpu_bridge/: CMakeLists.txt
webgpu_bridge/js/: llama_webgpu_bridge.js
webgpu_bridge/src/: llama_webgpu_core.cpp
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/versioned_sidebars/: version-0.6.2-sidebars.json
website_jaspr/: README.md  pubspec.yaml
website_jaspr/content/: index.md  legacy-docusaurus.md  migration-status.md  platform-backend-matrix.md
website_jaspr/lib/: main.server.dart  main.server.options.dart
website_jaspr/web/: CNAME
windows/: CMakeLists.txt
(+392 files in other folders)
